--- a/index.html
+++ b/index.html
@@ -1,58 +1,85 @@
-<html>
 <!DOCTYPE html>
-<html lang="kk">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Кіру</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Регистрация</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f2f2f2;
+        }
+        .registration-form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            width: 100%;
+        }
+        .registration-form h2 {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        .form-group input {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .form-group button {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        .form-group button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Кіру</h1>
-    </header>
-    <main>
-        <form action="login_process.php" method="POST">
-            <label for="username">Пайдаланушы аты:</label>
-            <input type="text" id="username" name="username" required>
-            
-            <label for="password">Құпия сөз:</label>
-            <input type="password" id="password" name="password" required>
 
-            <button type="submit">Кіру</button>
-        </form>
-    </main>
-    <footer>
-        <p>© 2024, Біздің компания.</p>
-    </footer>
+<div class="registration-form">
+    <h2>Регистрация</h2>
+    <form action="/register" method="POST">
+        <div class="form-group">
+            <label for="username">Имя пользователя:</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Электронная почта:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Пароль:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <div class="form-group">
+            <label for="confirm_password">Подтвердите пароль:</label>
+            <input type="password" id="confirm_password" name="confirm_password" required>
+        </div>
+        <div class="form-group">
+            <button type="submit">Зарегистрироваться</button>
+        </div>
+    </form>
+</div>
+
 </body>
 </html>
-
-<!DOCTYPE html>
-<html lang="kk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тіркелу</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Тіркелу</h1>
-    </header>
-    <main>
-        <form action="register_process.php" method="POST">
-            <label for="username">Пайдаланушы аты:</label>
-            <input type="text" id="username" name="username" required>
-            
-            <label for="password">Құпия сөз:</label>
-            <input type="password" id="password" name="password" required>
-
-            <button type="submit">Тіркелу</button>
-        </form>
-    </main>
-    <footer>
-        <p>© 2024, Біздің онлайн курс.</p>
-    </footer>
-</body>
-</html> 
